force-app/main/default/objects/HAM_Engagement_Activities__c/HAM_Engagement_Activities__c.object-meta.xml
<CustomObject>
    <label>Engagement Activities</label>
    <nameField>
        <displayFormat>EA-{00000}</displayFormat>
        <label>Engagement Activities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>