force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Activity_Name__c</fullName>
    <formula>HAM_Engagement_Activity_Value__r.HAM_Activity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Name</label>
    <type>Text</type>
</CustomField>