force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Activity_Subtype__c.field-meta.xml
<CustomField>
    <fullName>HAM_Activity_Subtype__c</fullName>
    <label>DEPRActivity Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Peer Advising Appointment</fullName>
            </value>
            <value>
                <fullName>Professional Advising Appointment</fullName>
            </value>
            <value>
                <fullName>Industry Peer Advising Appointment</fullName>
            </value>
            <value>
                <fullName>Industry Professional Advising Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>