force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Advising_Notes__c.field-meta.xml
<CustomField>
    <fullName>HAM_Advising_Notes__c</fullName>
    <label>Advising Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>