force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Assignment__c.field-meta.xml
<CustomField>
    <fullName>HAM_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>ucinn_ascendv2__Assignment__c</referenceTo>
    <relationshipLabel>Engagement Activities</relationshipLabel>
    <relationshipName>Engagement_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>