force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Category__c.field-meta.xml
<CustomField>
    <fullName>HAM_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interview Practice</fullName>
            </value>
            <value>
                <fullName>JHS</fullName>
            </value>
            <value>
                <fullName>Jump Start</fullName>
            </value>
            <value>
                <fullName>Know Thyself</fullName>
            </value>
            <value>
                <fullName>Peer Advising</fullName>
            </value>
            <value>
                <fullName>Professional Advising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>