force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Class_Level__c.field-meta.xml
<CustomField>
    <fullName>HAM_Class_Level__c</fullName>
    <label>Class Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freshman</fullName>
            </value>
            <value>
                <fullName>Sophomore</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>