force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Comments__c.field-meta.xml
<CustomField>
    <fullName>HAM_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>