force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Constituent__c.field-meta.xml
<CustomField>
    <fullName>HAM_Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Activities</relationshipLabel>
    <relationshipName>Engagement_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>