force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Constituent_Met_With__c.field-meta.xml
<CustomField>
    <fullName>HAM_Constituent_Met_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person this constituent met with</description>
    <label>Met With</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Activities (Met With)</relationshipLabel>
    <relationshipName>Engagement_Activities1</relationshipName>
    <type>Lookup</type>
</CustomField>