force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>