force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Drop_In__c.field-meta.xml
<CustomField>
    <fullName>HAM_Drop_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drop In</label>
    <type>Checkbox</type>
</CustomField>