force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_EAV_Activity_Subtype__c.field-meta.xml
<CustomField>
    <fullName>HAM_EAV_Activity_Subtype__c</fullName>
    <label>EAV Activity Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>