force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Engagement_Activity_Category__c.field-meta.xml
<CustomField>
    <fullName>HAM_Engagement_Activity_Category__c</fullName>
    <formula>TEXT( HAM_Engagement_Activity_Value__r.HAM_Category__c )</formula>
    <label>Engagement Activity Category</label>
    <type>Text</type>
</CustomField>