force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Engagement_Activity_Subtype__c.field-meta.xml
<CustomField>
    <fullName>HAM_Engagement_Activity_Subtype__c</fullName>
    <formula>TEXT(HAM_Engagement_Activity_Value__r.HAM_Activity_Subtype__c)</formula>
    <label>Engagement Activity Subtype</label>
    <type>Text</type>
</CustomField>