force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Engagement_Activity_Value__c.field-meta.xml
<CustomField>
    <fullName>HAM_Engagement_Activity_Value__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engagement Activity Value</label>
    <referenceTo>HAM_Engagement_Activity_Value__c</referenceTo>
    <relationshipLabel>Engagement Activities</relationshipLabel>
    <relationshipName>Engagement_Activities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>