force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Fiscal_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>HAM_Fiscal_Year_Formula__c</fullName>
    <formula>TEXT(YEAR(  HAM_Date__c  ) + IF(MONTH(  HAM_Date__c  ) &gt;= 7, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>