force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Fiscal_Year_Text__c.field-meta.xml
<CustomField>
    <fullName>HAM_Fiscal_Year_Text__c</fullName>
    <label>Fiscal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>