force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Organization__c.field-meta.xml
<CustomField>
    <fullName>HAM_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Activities</relationshipLabel>
    <relationshipName>Engagement_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>