force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Role__c.field-meta.xml
<CustomField>
    <fullName>HAM_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
                <isActive>false</isActive>
                <label>Recruiter</label>
            </value>
            <value>
                <fullName>Speaker</fullName>
                <isActive>false</isActive>
                <label>Speaker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>