force-app/main/default/objects/HAM_Engagement_Activities__c/fields/HAM_Session__c.field-meta.xml
<CustomField>
    <fullName>HAM_Session__c</fullName>
    <label>Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HAM_Session</valueSetName>
    </valueSet>
</CustomField>