force-app/main/default/objects/HAM_Engagement_Activities__c/recordTypes/Advising.recordType-meta.xml
<RecordType>
    <fullName>Advising</fullName>
    <active>true</active>
    <description>Used for constituent advisement</description>
    <label>Advising</label>
</RecordType>