force-app/main/default/objects/HAM_Engagement_Activities__c/recordTypes/Career_Center.recordType-meta.xml
<RecordType>
    <fullName>Career_Center</fullName>
    <active>true</active>
    <description>Used to add Career Center Engagement Activity</description>
    <label>Career Center</label>
</RecordType>