force-app/main/default/objects/HAM_Engagement_Activities__c/recordTypes/General_Engagement_Activity_Values.recordType-meta.xml
<RecordType>
    <fullName>General_Engagement_Activity_Values</fullName>
    <active>true</active>
    <description>Used to add General Engagement Activity</description>
    <label>General Engagement Activity Values</label>
</RecordType>