force-app/main/default/objects/HAM_Engagement_Activities__c/validationRules/Cannot_Edit_Engagement_Activities.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Engagement_Activities</fullName>
    <active>true</active>
    <description>Prevents Career Center users from editing &quot;regular&quot; Engagement Activities</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName=&apos;General_Engagement_Activity_Values&apos;,
 NOT($Permission.HAM_Engagement_Manager), 
    OR(
        ISCHANGED(Name),
        ISCHANGED(HAM_Engagement_Activity_Value__c),
	ISCHANGED(HAM_Constituent__c),
	ISCHANGED(HAM_Activity_Type__c),
	ISCHANGED(HAM_Activity_Subtype__c),
        ISCHANGED(RecordTypeId),
        ISCHANGED(HAM_Category__c),
        ISCHANGED(HAM_Role__c)
    )
)</errorConditionFormula>
    <errorMessage>You can only edit Career Center activities</errorMessage>
</ValidationRule>